<resources>
    <string name="app_name">TravelBuddy</string>
    <string name="my_trips">My Trips</string>
    <string name="map">Map</string>
    <string name="explore">Explore</string>
    <string name="social">Social</string>
    <string name="add">Add</string>
    <string name="notification_button">Notifications icon</string>
    <string name="account_button">Account icon</string>
    <string name="arrow_back">Arrow back icon</string>
    <string name="add_icon">Add icon</string>
    <string name="add_a_trip">Add a trip</string>
    <string name="add_a_phrase">Add a phrase</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="account">Account</string>
    <string name="more_icon">More icon</string>
    <string name="trips">Trips</string>
    <string name="phrases">Phrases</string>
    <string name="delete_account">Delete account</string>
    <string name="remove_all_data">Remove all data</string>
    <string name="log_out">Log out</string>
    <string name="your_friends">Your friends</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="edit_profile">User profile</string>
    <string name="settings">Settings</string>
    <string name="version">Version</string>
    <string name="app_icon">App icon</string>
    <string name="app_description">TravelBuddy simplifies travel planning, allowing you to create and manage personalized itineraries as well as share your travel experiences and explore new destinations effortlessly.</string>
    <string name="creator">Creator</string>
    <string name="remove_trip">Remove trip</string>
    <string name="edit_details">Edit details</string>
    <string name="notifications">Notification center</string>
    <string name="delete_sweep_icon">delete_sweep_icon</string>
    <string name="sign_in_button">Sign in</string>
    <string name="create_account">Create an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="verification_needed_title">Verification needed</string>
    <string name="verification_needed_content">We\'re sorry, but it looks like your account is not yet verified. To access all of our services, you\'ll need to verify your account. You can get a verification link sent to your email again.</string>
    <string name="resend_email">Resend email</string>
    <string name="try_again">Try again</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="verification_needed_2">To fully activate your account, please verify your email address by following the instructions in the verification email that we sent to your registered email address.</string>
    <string name="ok">OK</string>
    <string name="reset_password">Reset password</string>
    <string name="close_icon">Close icon</string>
    <string name="save_button">Save button</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="username">Display name</string>
    <string name="signedOut">Signed out</string>
    <string name="save">Save</string>
    <string name="done_icon">Done icon</string>
    <string name="phrase">Phrase</string>
    <string name="translation">Translation</string>
    <string name="phrase_saved">Phrase added!</string>
    <string name="like">Like icon</string>
    <string name="comment">Comment icon</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="unknown_error">Unknown error</string>
    <string name="account_deleted">Account deleted successfully</string>
    <string name="failed_to_delete_account">Failed to delete the account</string>
    <string name="data_removed">All data removed</string>
    <string name="failed_to_remove_data">Failed to remove data</string>
    <string name="login_success">Logged in</string>
    <string name="error_user_not_verified">User is not verified</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_account_does_not_exist">Account does not exist</string>
    <string name="error_user_already_exists">User already exists</string>
    <string name="error_wrong_email_format">Wrong email format</string>
    <string name="error_wrong_password_format">Wrong password format</string>
    <string name="password_too_short">Password is too short</string>
    <string name="error_wrong_password_or_email">Wrong password or email</string>
    <string name="password_reset_email_failed">Email failed to send</string>
    <string name="password_reset_email_sent">Email sent</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="update_username">Update your display name</string>
    <string name="username_updated">Display name updated</string>
    <string name="username_update_failed">Display name is taken</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="select_theme">Select theme</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="trip_saved">Trip saved</string>
    <string name="trip_title">Trip title</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="empty_trips_screen_icon">Empty trips screen icon</string>
    <string name="no_trips_text">No trips added</string>
    <string name="empty_phrases_screen_icon">Empty phrases screen icon</string>
    <string name="no_phrases_text">No phrases added</string>
    <string name="empty_notifications_screen_icon">Empty notifications screen icon</string>
    <string name="no_notifications_text">No notifications</string>
    <string name="delete">Delete</string>
    <string name="confirm_text_upper">CONFIRM</string>
    <string name="confirm_text_description">To confirm, type \'CONFIRM\' in the text field below.</string>
    <string name="confirm_headline">Confirm account deletion</string>
    <string name="confirm">Confirm</string>
    <string name="remove_headline">Confirm data removal</string>
    <string name="add_trip_bottom_sheet">Add\n trip</string>
    <string name="add_phrase_bottom_sheet">Add\n phrase</string>
    <string name="add_friend_bottom_sheet">Add\n friend</string>
    <string name="email_not_available">Email not available</string>
    <string name="verification_email_resent">Verification email resent</string>
    <string name="failed_to_resend_verification_email">Failed to resend verification email</string>
    <string name="friend_added_successfully">Friend added successfully</string>
    <string name="friend_removed_successfully">Friend removed successfully</string>
    <string name="failed_to_remove_friend">Failed to remove friend</string>
    <string name="no_friends_text">No friends added</string>
    <string name="empty_friends_screen_icon">No friends icon</string>
    <string name="details">Details</string>
    <string name="trip_start_date">Start Date: %1$s</string>
    <string name="trip_end_date">End Date: %1$s</string>
    <string name="remove_friend_headline">Confirm to remove</string>
    <string name="confirm_remove_friend">Click confirm to remove selected friend</string>
    <string name="remove">Remove</string>
    <string name="system_default">System default</string>
    <string name="profile">Profile</string>
    <string name="edit_icon">Edit icon</string>
    <string name="location_button">Location icon button</string>
    <string name="account_creation_date">"Member since: "</string>
    <string name="change_email">Email address change</string>
    <string name="search_icon">Search icon</string>
    <string name="clear_icon">Clear icon</string>
    <string name="recommended">Recommended</string>
    <string name="popular">Popular</string>
    <string name="filters">"Filters: "</string>
    <string name="sign_out">Sign out button</string>
    <string name="update_email">Update your email</string>
    <string name="current_email_address">Current email address</string>
    <string name="new_email_address">New email address</string>
    <string name="confirm_remove_trip">Click confirm to remove selected trip</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="delete_icon">Delete icon</string>
    <string name="checklist">Checklist</string>
    <string name="list_item_button">List item</string>
    <string name="checked_items">%1$d checked item%2$s</string>
    <string name="s">s</string>
    <string name="no_image">No image available</string>
    <string name="trip_plan">Trip plan</string>
    <string name="list_empty">List empty</string>
    <string name="no_plans">No plans added</string>
    <string name="checklist_colon">Checklist:</string>
    <string name="trip_plan_colon">Trip plan:</string>
    <string name="destination_detail">Destination: %1$s</string>
    <string name="trip_updated">Trip updated</string>
    <string name="my_location">My location</string>
    <string name="search_button">Search button</string>
    <string name="search">Search</string>
    <string name="empty_query_title">Empty Query</string>
    <string name="search_query_empty">Search query cannot be empty.</string>
    <string name="no_results_title">No Results</string>
    <string name="search_no_results">No locations found for the given query.</string>
    <string name="category">Category</string>
    <string name="loading">Fetching information...</string>
    <string name="search_to_get_information">Search to get information</string>
    <string name="scroll_to_top">Go to Top</string>
    <string name="no_subtext_available">No subtext available</string>
    <string name="arrow_down_icon">Arrow down icon</string>
    <string name="empty_destination_title">No destination specified</string>
    <string name="empty_destination_message">Please enter a destination to search.</string>
    <string name="empty_category_title">No category specified</string>
    <string name="empty_category_message">Please select a category to filter the search.</string>
    <string name="no_results_found">No places found. Try a different search.</string>
    <string name="view_on_map">View on map</string>
    <string name="map_icon">Map icon</string>
    <string name="show_on_map">Visualise on map</string>
    <string name="weather_icon">Weather icon</string>
    <string name="check_weather">Check weather online</string>
    <string name="place_label">Label</string>
    <string name="date_of_visit">Date of visit</string>
    <string name="trip_plan_saved">Trip plan added</string>
    <string name="add_trip_plan">Add trip plan</string>
    <string name="edit_item">Edit item</string>
    <string name="remove_item">Remove item</string>
    <string name="edit_trip_plan">Edit trip plan</string>
    <string name="confirm_remove_trip_plan">Confirm trip plan removal</string>
    <string name="trip_plan_delete_confirmation">Click confirm to remove this item from the list</string>
    <string name="trip_plan_updated">Trip plan updated</string>
    <string name="remove_trip_plan">Remove trip plan</string>
    <string name="edit">Edit</string>
    <string name="choose_trip">Choose trip</string>
    <string name="add_to_trip">Add to trip</string>
    <string name="map_view">Map view</string>
    <string name="map_search">Map search</string>
    <string name="new_search">New search</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="failed_to_send_request">Failed to send request</string>
    <string name="share_icon">Share icon</string>
    <string name="unshare">Unshare</string>
    <string name="share">Share</string>
    <string name="trip_not_shared">Trip set to private</string>
    <string name="set_not_shared">Set to private</string>
    <string name="click_to_confirm">Click to confirm</string>
    <string name="confirm_text">Click if you want to proceed with this action</string>
    <string name="status_public">Status: Friends only</string>
    <string name="status_private">Status: Private</string>
    <string name="trip_shared">Trip set to friends only</string>
    <string name="author">Author: %1$s</string>
    <string name="terms_of_service_text">Coming soon</string>
    <string name="already_friends">This user is already your friend</string>
    <string name="already_sent_request">Friend request already sent</string>
    <string name="edit_phrase">Edit phrase</string>
    <string name="remove_phrase">Remove phrase</string>
    <string name="confirm_remove_phrase">Click confirm to remove phrase</string>
    <string name="phrase_updated">Phrase updated</string>
    <string name="no_internet_connection">No Internet access</string>
    <string name="no_internet_connection_message">The app\'s functionality is limited due to no Internet access.</string>
    <string name="login_icon">Login Icon</string>
    <string name="sign_up_icon">Sign up icon</string>
    <string name="error_username_taken">Display name in use</string>
    <string name="username_required_message">To proceed with using TravelBuddy, please complete the initial display name setup.</string>
    <string name="set_username">Set your display name</string>
</resources>